--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/newsomderek/discord#readme",
   "devDependencies": {
     "aws-sdk": "^2.2.44",
+    "chai": "^3.5.0",
     "del": "^2.2.0",
     "fs": "0.0.2",
     "gulp": "^3.9.1",
