--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "request": "^2.69.0"
   }
 }
