--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "run-sequence": "^1.1.5"
   },
   "dependencies": {
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "string-format": "^0.5.0"
   }
 }
